working on task 5
built docker image:

# build
docker build -f docker/recommender.Dockerfile -t reco-api:local .

# run it locally
docker run --rm -p 8080:8080 `
  --env-file infra/kafka.env `
  reco-api:local

# quick smoke test
curl http://localhost:8080/health

Now need to pick a registry and tag...

--- a/milestone 2/requirements.txt
+++ b/milestone 2/requirements.txt
@@ -1,16 +1,15 @@
-fastapi
-uvicorn
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
 prometheus-client
 pydantic
 pandas
 pyarrow
-confluent-kafka
+confluent-kafka==2.4.0
 python-dotenv
 scikit-learn
 numpy
 pytest
 avro
-fastavro
-requests
-confluent-kafka["schemaregistry"]
+fastavro==1.9.4
+requests>=2.32.0
 pyarrow
