--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pandas
 pyarrow
 confluent-kafka==2.4.0
 python-dotenv
-scikit-learn
+scikit-learn>=1.3
 numpy
 pytest
 avro
@@ -14,7 +14,7 @@ fastavro==1.9.4
 requests>=2.32.0
 pyarrow
 pandera
-
 ruff
-
 joblib
+implicit==0.7.2
+tabulate>=0.9
