--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 prometheus-client
-pydantic
-pandas
+pydantic==2.9.2
+pandas==2.2.2
 pyarrow
 confluent-kafka==2.4.0
 python-dotenv
-scikit-learn>=1.3
-numpy
+scikit-learn==1.5.2
+numpy==1.26.4
 pytest
 avro
 fastavro==1.9.4
@@ -18,3 +18,4 @@ ruff
 joblib
 implicit==0.7.2
 tabulate>=0.9
+scipy==1.11.4
