--- a/model_registry/v0.2/meta.yaml
+++ b/model_registry/v0.2/meta.yaml
@@ -1,6 +1,9 @@
 version: v0.2
-created_at: 2024-10-12T08:30:00+00:00
+created_at: "2025-11-10T23:45:00Z"
+artifact: model.joblib
+data_snapshot_id: "snap-001"
+pipeline_git_sha: "abc123"
+container_image_digest: "local-dev"
 metrics:
-  hr@20: 0.47
-  ndcg@20: 0.31
-notes: "Auto retrained via scheduled pipeline"
+  map@10: 0.12
+  auc: 0.71
