--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m venv .venv
           source .venv/bin/activate
-          pip install -r requirements.trainer.txt
+          pip install -r trainer/requirements.trainer.txt
 
       - name: Run trainer (publish new model version)
         env:
