--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,9 +58,15 @@ jobs:
 
       # 4) Build and push the image
       - name: Build and push image
+        env:
+          IMAGE: "us-central1-docker.pkg.dev/${{ env.GCP_PROJECT }}/recommender-api-476122/reco/reco-api"
         run: |
-          IMAGE="us-central1-docker.pkg.dev/recommender-api-476122/reco/reco-api"
-          gcloud builds submit --tag "$IMAGE"
+          # Build using the service Dockerfile in ./docker
+          gcloud builds submit \
+            --tag "$IMAGE" \
+            --file docker/service.Dockerfile \
+            .
+
 
       # 5) Deploy to Cloud Run
       - name: Deploy to Cloud Run
