--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,11 +62,7 @@ jobs:
           IMAGE: "us-central1-docker.pkg.dev/${{ env.GCP_PROJECT }}/recommender-api-476122/reco/reco-api"
         run: |
           # Build using the service Dockerfile in ./docker
-          gcloud builds submit \
-            --tag "$IMAGE" \
-            --file docker/service.Dockerfile \
-            .
-
+          gcloud builds submit --tag gcr.io/recommender-api-476122/us-central1-docker.pkg.dev/recommender-api-476122/reco/reco-api .
 
       # 5) Deploy to Cloud Run
       - name: Deploy to Cloud Run
