--- a/cloudbuild-docker.yaml
+++ b/cloudbuild-docker.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: gcr.io/cloud-builders/docker
-  args: ['build', '-f', 'docker/service.Dockerfile', '-t', '${_IMAGE}', '.']
+  args: ['build', '-f', 'service.Dockerfile', '-t', '${_IMAGE}', '.']
 
 images:
 - '${_IMAGE}'
