--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,12 +61,7 @@ jobs:
         env:
           IMAGE: "us-central1-docker.pkg.dev/${{ env.GCP_PROJECT }}/recommender-api-476122/reco/reco-api"
         run: |
-          # Build using the service Dockerfile in ./docker
-          gcloud builds submit \
-            --tag "$IMAGE" \
-            --file docker/service.Dockerfile \
-            .
-
+          gcloud builds submit --tag "$IMAGE" --dockerfile docker/service.Dockerfile .
 
       # 5) Deploy to Cloud Run
       - name: Deploy to Cloud Run
