--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,9 +58,13 @@ jobs:
 
       # 4) Build and push the image
       - name: Build and push image
+        env:
+          IMAGE: "us-central1-docker.pkg.dev/recommender-api-476122/reco/reco-api"
         run: |
           # Build using the service Dockerfile in ./docker
-          gcloud builds submit --tag us-central1-docker.pkg.dev/recommender-api-476122/reco/reco-api --dockerfile docker/service.Dockerfile .
+          gcloud builds submit docker/service.Dockerfile \
+            --tag "$IMAGE"
+
       # 5) Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
