--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,9 +61,12 @@ jobs:
         env:
           IMAGE: "us-central1-docker.pkg.dev/recommender-api-476122/reco/reco-api"
         run: |
-          # Build using the service Dockerfile in ./docker
-          gcloud builds submit docker/service.Dockerfile \
-            --tag "$IMAGE"
+          # # Build using the service Dockerfile in ./docker
+          # gcloud builds submit docker/service.Dockerfile \
+          #   --tag "$IMAGE"
+          gcloud builds submit . \
+          --config=cloudbuild.yaml \
+          --substitutions=_IMAGE="$IMAGE"
 
       # 5) Deploy to Cloud Run
       - name: Deploy to Cloud Run
